Fix footer visit us link center alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -53,7 +53,12 @@
   display: flex;
   align-items: center;
 }
-
+.visit-us-link {
+  position: relative;
+}
+.visit-us-link svg {
+  position: absolute;
+}
 .footer .contact-links svg {
   margin-left: 1rem;
 }
